[gd_scene load_steps=6 format=2]

[ext_resource path="res://default_theme_tools.tres" type="Theme" id=1]
[ext_resource path="res://tools/editor/EditorGlobalSettings.gd" type="Script" id=2]
[ext_resource path="res://tools/editor/EditorGlobalSettingsShortcuts.gd" type="Script" id=3]
[ext_resource path="res://tools/editor/settings/EditorSettingsSong.gd" type="Script" id=4]
[ext_resource path="res://tools/editor/settings/EditorSettingsGlobal.gd" type="Script" id=5]

[node name="EditorGlobalSettings" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 655.0
margin_top = 396.0
margin_right = -555.0
margin_bottom = -284.0
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Editor settings"
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="MarginContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 37.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 5 )

[node name="Tree" type="Tree" parent="TabContainer/General"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 333.0
columns = 2
hide_root = true

[node name="Song" type="MarginContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 4 )

[node name="Tree" type="Tree" parent="TabContainer/Song"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 338.0
columns = 2
hide_root = true

[node name="Shortcuts" type="MarginContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Shortcuts"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 338.0

[node name="Panel" type="Control" parent="TabContainer/Shortcuts/VBoxContainer"]
margin_right = 680.0
margin_bottom = 343.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Shortcuts/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="TabContainer/Shortcuts/VBoxContainer/Panel/VBoxContainer"]
margin_right = 680.0
margin_bottom = 308.0
size_flags_vertical = 3
columns = 2
hide_root = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Shortcuts/VBoxContainer/Panel/VBoxContainer"]
margin_top = 318.0
margin_right = 680.0
margin_bottom = 343.0
text = "Reset all to default"

[node name="WindowDialog" type="ConfirmationDialog" parent="TabContainer/Shortcuts/VBoxContainer/Panel"]
visible = true
margin_left = -5.0
margin_top = -32.0
margin_right = 310.0
margin_bottom = 104.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "Por favor, Confirma..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Shortcuts/VBoxContainer/Panel/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -41.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Shortcuts/VBoxContainer/Panel/WindowDialog/VBoxContainer"]
margin_top = 2.0
margin_right = 299.0
margin_bottom = 27.0
text = "Press the new button combination"
align = 1

[node name="Label2" type="Label" parent="TabContainer/Shortcuts/VBoxContainer/Panel/WindowDialog/VBoxContainer"]
margin_top = 31.0
margin_right = 299.0
margin_bottom = 56.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Shortcuts/VBoxContainer/Panel/WindowDialog/VBoxContainer"]
margin_top = 60.0
margin_right = 299.0
margin_bottom = 85.0

[node name="ClearButton" type="Button" parent="TabContainer/Shortcuts/VBoxContainer/Panel/WindowDialog/VBoxContainer/HBoxContainer"]
margin_right = 147.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetToDefaultButton" type="Button" parent="TabContainer/Shortcuts/VBoxContainer/Panel/WindowDialog/VBoxContainer/HBoxContainer"]
margin_left = 151.0
margin_right = 299.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Reset to default"

[node name="ResetConfirmationDialog" type="ConfirmationDialog" parent="TabContainer/Shortcuts/VBoxContainer/Panel"]
margin_right = 200.0
margin_bottom = 74.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "Por favor, Confirma..."
dialog_text = "Do you want to reset all shortcuts to default?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TabContainer/Shortcuts/VBoxContainer/Panel/VBoxContainer/Button" to="TabContainer/Shortcuts/VBoxContainer/Panel/ResetConfirmationDialog" method="popup_centered"]
